gobmkida/g3/propose_edge_moves
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/propose_edge_moves/src/engine/reading.c:2749:7: error: use of undeclared identifier 'dword_785CFC'
v13 = dword_785CFC[v9]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/propose_edge_moves/src/engine/reading.c:2759:7: error: use of undeclared identifier 'dword_785CFC'
v20 = dword_785CFC[v9]; 
      ^
2 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/propose_edge_moves/src/obj/1/reading.o] Error 1
